syntax = "proto3";

package org.eigengo.rsa.identity.v100;

message IdentifyFace {
    int64 ingestionTimestamp = 2;
    string correlationId = 3;
    string handle = 4;
    bytes rgbBitmap = 5;
}

message IdentifyFaces {
    repeated IdentifyFace identifyFaces = 1;
}

message FaceImage {
    double confidence = 1;
    int32 x = 2;
    int32 y = 3;
    int32 w = 4;
    int32 h = 5;
    bytes rgbBitmap = 6;
}
